<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/studentName"
        android:layout_width="429dp"
        android:layout_height="72dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:text="Noah Johnson Hamster Run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/zoom"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginBottom="556dp"
        android:ems="10"
        android:text="@string/zoom_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/moves"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:text="@string/moves_string"
        app:layout_constraintBottom_toTopOf="@+id/energy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stores"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:ems="10"
        android:text="@string/stores_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zoom"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/energy"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:ems="10"
        android:text="@string/energy_string"
        app:layout_constraintBottom_toTopOf="@+id/zoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/food"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:ems="10"
        android:text="@string/food_string"
        app:layout_constraintBottom_toTopOf="@+id/energy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moves"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="105dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:onClick="handleResetButton"
        android:text="RESET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toEndOf="@+id/food"
        app:layout_constraintTop_toBottomOf="@+id/studentName" />

    <Button
        android:id="@+id/zoomBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="handleZoomButton"
        android:text="Zoom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/leftbtn"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameArea"
        app:layout_constraintVertical_bias="0.346" />

    <Button
        android:id="@+id/eatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="handleEatButton"
        android:text="Eat"
        app:layout_constraintBottom_toTopOf="@+id/gameArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toEndOf="@+id/stores"
        app:layout_constraintTop_toBottomOf="@+id/resetBtn"
        app:layout_constraintVertical_bias="0.37" />

    <edu.sdsmt.hamsterrun_johnson_noah.GameView
        android:id="@+id/gameArea"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentName" />

    <Button
        android:id="@+id/upBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:onClick="handleUpButton"
        android:text="U"
        app:layout_constraintBottom_toTopOf="@+id/downBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/leftbtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:onClick="handleLeftButton"
        android:text="L"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameArea"
        app:layout_constraintVertical_bias="0.513" />

    <Button
        android:id="@+id/rightBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="69dp"
        android:layout_marginBottom="44dp"
        android:onClick="handleRightButton"
        android:text="R"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/leftbtn" />

    <Button
        android:id="@+id/downBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="4dp"
        android:onClick="handleDownButton"
        android:text="D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="74dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="73dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="74dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="73dp" />


</androidx.constraintlayout.widget.ConstraintLayout>